[package]
name = "pre-invasiv"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14" # File dialogs
chrono = "0.4"
tempfile = "3.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36", features = ["full"] }
process_control = "4.0" # For better ffmpeg control
