[package]
name = "skewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.27.2", features = ["serde"] }
egui = "0.27.2"
image = { version = "0.24", default-features = false, features = ["png"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
chrono = "0.4"
tempfile = "3.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36", features = ["full"] }
process_control = "4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
